--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "hardhat": "^2.19.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@uniswap/v3-core": "^1.0.1"
   }
 }
